# AISmaker

./: AISmaker.fbp  CMakeLists.txt  README.md  sample.1.5.18.21.24a.24b.txt
po/: AISmaker_pi.pot  POTFILES.in
src/: AISmaker_pi.cpp  AISmaker_pi.h  AISmakergui.cpp  AISmakergui.h  AISmakergui_impl.cpp  AISmakergui_impl.h  icons.cpp  icons.h
